force-app/main/default/objects/Transaction_Log__c/Transaction_Log__c.object-meta.xml
<CustomObject>
    <label>Transaction_Log</label>
    <nameField>
        <displayFormat>Trans-{0000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>