force-app/main/default/objects/Transaction_Log__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error_Log</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>