force-app/main/default/objects/Transaction_Log__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <label>Process_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>